@@ -1,3 +1,7 @@
+2003-01-31  Peter Bienstman <Peter.Bienstman@rug.ac.be>
+
+	* stack0.py: New test.
+
 2002-10-30  Peter Bienstman <Peter.Bienstman@rug.ac.be>
 
 	* coupled.py: New test.
